# VocabTree

./: .gitignore  CMakeLists.txt  DVD-DB-50.tar  DVD-Query-50-1.tar  Database_DVD_DB_50.txt  data_sift.txt  main  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
